--- a/vperf-web/src/main/webapp/experiment/new.html
+++ b/vperf-web/src/main/webapp/experiment/new.html
@@ -19,7 +19,9 @@
 
         </table>
 
-        <input type="submit" value="Submit!" />
+        <p>
+            <input type="submit" value="Submit" />
+        </p>
 
     </div>
 </div>
