--- a/vperf-web/src/main/webapp/templates-hidden/default.html
+++ b/vperf-web/src/main/webapp/templates-hidden/default.html
@@ -4,7 +4,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     
-		<title>com.ajantis.plab.vperfmanager.vPerf-Manager</title>
+		<title>vPerformance manager</title>
     <style class="lift:CSS.blueprint" />
     <style class="lift:CSS.fancyType" />
     <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
@@ -67,7 +67,7 @@
   <body>
     <div class="container">
       <div class="column span-12 last" style="text-align: right">
-        <h1 class="alt">app-web<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"/></h1>
+        <h1 class="alt">vPerformance Laboratory<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"/></h1>
       </div>
 
       <hr/>
