--- a/vperf-web/src/main/webapp/templates-hidden/default.html
+++ b/vperf-web/src/main/webapp/templates-hidden/default.html
@@ -66,9 +66,11 @@
 
         <!-- Main hero unit for a primary marketing message or call to action -->
         <div class="hero-unit">
+            <!--
             <h1>Hello, world!</h1>
             <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
             <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+            -->
         </div>
 
         <div id="content">
@@ -76,6 +78,7 @@
         </div>
 
         <!-- Example row of columns -->
+        <!--
         <div class="row">
             <div class="span4">
                 <h2>Heading</h2>
@@ -92,7 +95,7 @@
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
                 <p><a class="btn" href="#">View details &raquo;</a></p>
             </div>
-        </div>
+        </div>-->
 
         <hr/>
 
