--- a/vperf-web/src/main/webapp/index.html
+++ b/vperf-web/src/main/webapp/index.html
@@ -1,11 +1,26 @@
-<div class="lift:surround?with=default;at=content">
-  <h2>vPerformance Lab</h2>
-  <p>
-    <!--
-    <div class="lift:helloWorld.howdy">
-      Welcome to webapp at <span id="time">The current time</span>
-    </div>
-    -->
-  </p>
-</div>
+<lift:surround with="default">
 
+    <lift:bind-at name="content">
+
+        <div class="page-header">
+            <h1>Main page</h1>
+            system architectural concepts
+        </div>
+
+    </lift:bind-at>
+
+    <lift:bind-at name="hero_content">
+
+        <div class="hero-unit">
+            <h2>vPerformance Lab</h2>
+            <p>
+                This is web portal for virtual performance laboratory system. It aims performance assessment for virtualized environments
+            </p>
+            <br/>
+            <p>
+                <a class="btn btn-primary btn-large">Learn more &raquo;</a>
+            </p>
+        </div>
+    </lift:bind-at>
+
+</lift:surround>
