[WIP] experiment management via webUI (CRUD)

--- a/vperf-web/src/main/webapp/experiments/new.html
+++ b/vperf-web/src/main/webapp/experiments/new.html
@@ -17,17 +17,17 @@
                         </div>
                     </div>
                     <div class="control-group">
-                        <label class="control-label" for="input02">Clients</label>
+                        <label class="control-label" for="input02">Iterations duration</label>
                         <div class="controls">
-                            <input type="text" class="input-mini clients_count" id="input02" />
-                            <p class="help-block">How much clients do you want to use?</p>
+                            <input type="text" class="input-mini iteration_duration" id="input02" />
+                            <p class="help-block">What is the time difference between iterations?</p>
                         </div>
                     </div>
                     <div class="control-group">
-                        <label class="control-label" for="input03">Iterations</label>
+                        <label class="control-label" for="input03">Clients variation</label>
                         <div class="controls">
-                            <input type="text" class="input-mini iterations_count" id="input03" />
-                            <p class="help-block">How much iterations do you want to be performed?</p>
+                            <input type="text" class="input-mini clients_count_arr" id="input03" />
+                            <p class="help-block">Provide a list of comma-delimited client counts (1 per each iteration)</p>
                         </div>
                     </div>
                     <div class="control-group">
