--- a/vperf-web/src/main/webapp/experiments/view.html
+++ b/vperf-web/src/main/webapp/experiments/view.html
@@ -1,6 +1,11 @@
 <lift:surround with="default">
-
+    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
     <lift:bind-at name="content">
+
+        <!--<script language="javascript" type="text/javascript" src="/classpath/flot/jquery.flot.stack.js" />-->
+        <h2>Plot of the sine function</h2>
+        <div id="graph_area" style="width:600px;height:400px;"></div>
+        <lift:FlotReport.sine></lift:FlotReport.sine>
 
         <lift:Experiments.view>
 
@@ -10,7 +15,6 @@
             </div>
 
             <ul>
-                <li>Clients: <span class="clients_count"></span></li>
                 <li>Iterations: <span class="iterations_count"></span></li>
             </ul>
 
