--- a/vperf-web/src/main/webapp/templates-hidden/default.html
+++ b/vperf-web/src/main/webapp/templates-hidden/default.html
@@ -61,10 +61,12 @@
             <!-- The HTML content will go here -->
         </div>
 
+        <div id="row"></div>
+
         <hr/>
 
         <footer>
-            <p>&copy; <a href="http://www.vperflab.com"><i>vPerfLab Inc.</i></a></p>
+            <p>&copy; <a href="http://www.vperflab.com"><i>vPerfLab</i></a></p>
         </footer>
     </div>
 
